--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,16 @@
 apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'checkstyle'
+
+repositories {
+    mavenCentral()
+}
+
+checkstyle {
+    toolVersion = '6.1'
+}
+
+dependencies {
+    compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
+    testCompile group: 'junit', name: 'junit', version: '4.+'
+}
