--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply from: "http://dl.bintray.com/content/shemnon/javafx-gradle/8.1.1/javafx.plugin"
+apply "idea"
 
 repositories {
     mavenCentral()
