Update Intellij, grade file

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,24 @@ gradle-app.setting
 
 # Cache of project
 .gradletasknamecache
+
+
+
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
+
+*.iml
+
+## Directory-based project format:
+.idea/
+
+## File-based project format:
+*.ipr
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
