--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,13 @@ repositories {
 dependencies {
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '1.9.+'
 }
 
 javafx {
 	mainClass = 'com.byteme.Main'
 	appID 'MULE'
 	appName 'MULE Game'
-  jvmArgs = ['-Djava.compiler=NONE']
 }
 
 jar {
